Uncommented the mini chrome element, fixing collapsed group disappear bug in IE, fixing the console.group and XHR styles.
git-svn-id: http://fbug.googlecode.com/svn/lite@5622 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/branches/firebug1.3/skin/xp/firebug.css
+++ b/branches/firebug1.3/skin/xp/firebug.css
@@ -851,6 +851,7 @@
     border-bottom: 1px solid #D7D7D7;
     padding: 2px 4px 1px 6px;
     background-color: #FFFFFF;
+    overflow: hidden !important; /* IE need this to avoid disappearing bug with collapsed logs */
 }
 
 .useA11y .logRow:focus {
@@ -878,8 +879,8 @@
 
 .logGroup {
     background: url(group.gif) repeat-x #FFFFFF;
-    padding: 0;
-    border: none;
+    padding: 0 !important;
+    border: none !important;
 }
 
 .logGroupBody {
@@ -1183,7 +1184,6 @@
 
 .logRow-stackTrace {
     padding-top: 0;
-    background: #F8F8F8;
 }
 
 .logRow-stackTrace > .objectBox-stackFrame {
@@ -1320,7 +1320,7 @@
 /*****************************************************************************************/
 
 .logRow-spy {
-    padding: 0px 0 1px 0;
+    padding: 0 !important;
 }
 
 .logRow-spy,
@@ -1630,8 +1630,9 @@
 }
 
 .Selector { margin-top:10px }
+.CSSItem {margin-left: 4% }
 .CSSText { padding-left:20px; }
-.CSSProperty { color:#005500; margin-top:10px; }
+.CSSProperty { color:#005500; }
 .CSSValue { padding-left:5px; color:#000088; }
 
 
@@ -2603,8 +2604,8 @@ position. if so, override it at chrome.js initialization when creating the div *
 
 /************************************************************************************************/
 /*
-//TODO: remove this
-
+//TODO: remove this when console2 is finished
+*/
 .logRow-group {
     background: #EEEEEE;
     border-bottom: none;
